# jfrog-cli-security

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  _typos.tom  _typos.toml  artifactory_test.go  audit_test.go  curation_test.go  detect_test.go  enrich_test.go  fastci.config.json  git_test.go  go.mod  go.sum  jfrogclisecurity.go  jfrogclisecurity_test.go  maliciousscan_test.go  remediation_test.go  scans_test.go  test.md  typos.tom  unit_test.go  xray_test.go  xsc_test.go
.github/: PULL_REQUEST_TEMPLATE.md
.jfrog-pipelines/: pipelines.yml
buildscripts/: download-jars.sh  update-jfrog-deps.sh
cli/: appcommands.go  appcpmmands.go  cli.go  flags.go  gitcommands.go  gitcommands_test.go  helpcommands.go  sbomcommands.go  scancommands.go  scancommands_test.go  utils.go  xraycommands.go
commands/: common.go
config/: general.go
enrichgraph/: enrichgraph.go  enrichgraph_test.go
formats/: conversion.go  enrich_output.go  simplejsonapi.go  summary.go  summary_test.go  summary_test.md  table.go
jas/: analyzermanager.go  common.go  common_test.go  commons_test.go  processtree_unix.go  processtree_windows.go
policy/: handler.go  handler_test.go  violations.go  violations_test.go
release/: pipelines.yml
resources/: deptreemanager.go  resources.go
sca/: dependencytree.go  pacakgemanager.go  sca.go
scanOutput/: bom_1771320523633.cdx.json  raw_1771320758122.json  sca_1771320524447.cdx.json  source_code_output_1771320758124.json  violations_1771320547232.json
tests/testdata/projects/package-managers/python/poetry/poetry/: pyproject.toml
tests/testdata/projects/package-managers/python/poetry/poetry-curation-project/: pyproject.toml
tests/testdata/projects/package-managers/python/poetry/poetry-curation-project/.jfrog/projects/: poetry.yaml
tests/testdata/projects/package-managers/python/uv/uv/: pyproject.toml
tests/testdata/projects/package-managers/python/uv/uv/app/: __init__.py  main.py
(+672 files in other folders)
