[project]
name = "xray-uv-vuln-test"
version = "0.1.0"
description = "Synthetic vulnerable project for Xray / SCA validation (UV)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # requests 2.19.x pins urllib3<1.24 (still carries known CVEs vs modern releases).
    "requests==2.19.1",
    "pyyaml==5.3.1",
    "pillow==8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
